--- a/BrickBreaker/BrickBreaker/BrickBreaker.vcxproj
+++ b/BrickBreaker/BrickBreaker/BrickBreaker.vcxproj
@@ -133,13 +133,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ball.cpp" />
+    <ClCompile Include="balls.cpp" />
     <ClCompile Include="Bricks.cpp" />
     <ClCompile Include="Layouts.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ball.h" />
+    <ClInclude Include="balls.h" />
     <ClInclude Include="Bricks.h" />
     <ClInclude Include="Layouts.h" />
   </ItemGroup>
