--- a/BrickBreaker/BrickBreaker/BrickBreaker.vcxproj.filters
+++ b/BrickBreaker/BrickBreaker/BrickBreaker.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="Layouts.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ball.cpp">
+    <ClCompile Include="balls.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,7 +35,7 @@
     <ClInclude Include="Layouts.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ball.h">
+    <ClInclude Include="balls.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
