--- a/BrickBreaker/BrickBreaker/BrickBreaker.vcxproj
+++ b/BrickBreaker/BrickBreaker/BrickBreaker.vcxproj
@@ -135,12 +135,14 @@
   <ItemGroup>
     <ClCompile Include="balls.cpp" />
     <ClCompile Include="Bricks.cpp" />
+    <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="Layouts.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="balls.h" />
     <ClInclude Include="Bricks.h" />
+    <ClInclude Include="GameOver.h" />
     <ClInclude Include="Layouts.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
