--- a/BrickBreaker/BrickBreaker/BrickBreaker.vcxproj.filters
+++ b/BrickBreaker/BrickBreaker/BrickBreaker.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="balls.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameOver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bricks.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="balls.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameOver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
